@@ -1,3 +1,8 @@
+2012-7-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
+    * DESCRIPTION (Version, Date): 0.03-08
+    * R/jags: fix inits issue (thanks to Martyn Plummer)
+
+
 2012-6-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>  
     * DESCRIPTION (Version, Date): 0.03-07
     * R/as.bugs.array2: fix the code where array() meets dimension = NULL
